--- a/folder/index.html
+++ b/folder/index.html
@@ -1,20 +1,21 @@
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <a href="/folder/index.html">Main Page</a> 
-    <a href="/folder/catalog/catalog.html">Catalog</a>
-    <a href="/folder/index.html">Contacts</a>   
+    <a class="menu__link" href="/folder/index.html">Main Page</a> 
+    <a class="menu__link" href="/folder/catalog/catalog.html">Catalog</a>
+    <a class="menu__link" href="/folder/index.html">Contacts</a>   
     
-    <h1>Главная страница</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos iste in itaque atque vero odit architecto distinctio enim aperiam. Numquam molestiae iure velit quibusdam ullam temporibus beatae! Laboriosam, quas molestiae?</p>
-    <h2>Welcome</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore sed, magni eaque repellat consequatur debitis voluptatem aut aliquam quaerat voluptas porro architecto doloribus expedita, enim soluta omnis similique illo impedit!</p>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi pariatur odit autem est temporibus, beatae reiciendis tempore magni ullam illum nemo ex atque, nostrum deserunt facilis commodi ipsum incidunt voluptatem?</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error, aperiam! Amet similique, eos praesentium quae unde beatae adipisci corporis deserunt quaerat inventore impedit id quos non nemo natus possimus dicta!</p>
+    <h1 class="title__h1">Главная страница</h1>
+    <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos iste in itaque atque vero odit architecto distinctio enim aperiam. Numquam molestiae iure velit quibusdam ullam temporibus beatae! Laboriosam, quas molestiae?</p>
+    <h2 class="title__h2">Welcome</h2>
+    <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore sed, magni eaque repellat consequatur debitis voluptatem aut aliquam quaerat voluptas porro architecto doloribus expedita, enim soluta omnis similique illo impedit!</p>
+    <p class="paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi pariatur odit autem est temporibus, beatae reiciendis tempore magni ullam illum nemo ex atque, nostrum deserunt facilis commodi ipsum incidunt voluptatem?</p>
+    <p class="paragraph">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error, aperiam! Amet similique, eos praesentium quae unde beatae adipisci corporis deserunt quaerat inventore impedit id quos non nemo natus possimus dicta!</p>
 
 </body>
 </html>
