--- a/folder/catalog/catalog.html
+++ b/folder/catalog/catalog.html
@@ -1,15 +1,16 @@
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <a href="/folder/index.html">Main Page</a> 
-    <a href="/folder/catalog/catalog.html">Catalog</a>
-    <a href="/folder/index.html">Contacts</a> 
-    <h1>Catalog</h1> 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod dolor corrupti odit doloribus incidunt quas id. Temporibus, inventore? Soluta ea delectus quisquam eos recusandae in consequatur cupiditate nemo. Aspernatur consequuntur sint iure ratione nostrum debitis, quae animi minima ab iusto fuga maiores odit voluptas cumque dolorem accusamus. Voluptatum veritatis commodi vitae repellat quis qui nam deserunt beatae dicta quisquam architecto rerum porro, aperiam doloribus cum! Officiis, beatae! Itaque aliquam quisquam placeat neque assumenda pariatur impedit repellat ratione odit iure dicta maxime fugit perspiciatis eligendi nostrum debitis quis at rerum culpa iusto facere vitae, est doloribus voluptate! Iste, repellendus amet, fugiat excepturi eligendi in illum possimus facilis ad sint ut ipsum quam quisquam nihil provident aut repellat sequi dolores voluptatem suscipit perspiciatis doloremque ullam. Nesciunt sapiente illo nostrum ipsa? Sunt vitae, modi officia animi nemo pariatur neque voluptatibus. Tempora itaque, exercitationem at, provident quam quia doloribus molestiae sapiente minima voluptatibus cum!</p>   
+    <a class="menu__link" href="/folder/index.html">Main Page</a> 
+    <a class="menu__link" href="/folder/catalog/catalog.html">Catalog</a>
+    <a class="menu__link" href="/folder/index.html">Contacts</a> 
+    <h1 class="title__h1">Catalog</h1> 
+    <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod dolor corrupti odit doloribus incidunt quas id. Temporibus, inventore? Soluta ea delectus quisquam eos recusandae in consequatur cupiditate nemo. Aspernatur consequuntur sint iure ratione nostrum debitis, quae animi minima ab iusto fuga maiores odit voluptas cumque dolorem accusamus. Voluptatum veritatis commodi vitae repellat quis qui nam deserunt beatae dicta quisquam architecto rerum porro, aperiam doloribus cum! Officiis, beatae! Itaque aliquam quisquam placeat neque assumenda pariatur impedit repellat ratione odit iure dicta maxime fugit perspiciatis eligendi nostrum debitis quis at rerum culpa iusto facere vitae, est doloribus voluptate! Iste, repellendus amet, fugiat excepturi eligendi in illum possimus facilis ad sint ut ipsum quam quisquam nihil provident aut repellat sequi dolores voluptatem suscipit perspiciatis doloremque ullam. Nesciunt sapiente illo nostrum ipsa? Sunt vitae, modi officia animi nemo pariatur neque voluptatibus. Tempora itaque, exercitationem at, provident quam quia doloribus molestiae sapiente minima voluptatibus cum!</p>   
     <img src="/folder/img/1.jpg" alt="mango juice">
     <img src="/folder/img/2.jpg" alt="mango juice 2">
 
